drivers: nfc: Import Xiaomi NFC PN548 driver
Change-Id: Ic2366b971c9a8a0b530a7b5ef8c2b3693ee801ee

 Conflicts:
	drivers/nfc/Kconfig
	drivers/nfc/Makefile

--- a/drivers/nfc/Makefile
+++ b/drivers/nfc/Makefile
@@ -5,5 +5,8 @@
 obj-$(CONFIG_LGE_NFC_PN547_C2)	:= pn547_lge.o
 obj-$(CONFIG_LGE_NFC_PN547_C2)	+= pn547_lge_hwadapter.o
 obj-$(CONFIG_NFC_BCM2079X)	+= bcm2079x.o
-obj-$(CONFIG_CXD224X_NFC)  += cxd224x-i2c.o
+obj-$(CONFIG_CXD224X_NFC)  	+= cxd224x-i2c.o
+obj-$(CONFIG_NFC_PN548)		+= pn548/
+obj-$(CONFIG_NFC_PN548)		+= esep61/
+
 ccflags-$(CONFIG_NFC_DEBUG) := -DDEBUG
