--- a/drivers/nfc/Kconfig
+++ b/drivers/nfc/Kconfig
@@ -4,6 +4,16 @@
 
 menu "Near Field Communication (NFC) devices"
 	depends on NFC
+
+config NFC_PN548
+	tristate "NXP PN548 NFC driver"
+	default n
+	---help---
+	  NXP PN548 core driver.
+
+	  To compile this driver as a module, choose m here. The module will
+	  be called pn548.
+	  Say N if unsure.
 endmenu
 
 config LGE_NFC
