Added Alucard hotplug (default)
Change-Id: I56ce8c64b3595f1b0eef407960bc764efdad9af1

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1077,6 +1077,8 @@ endmenu
 
 source "net/Kconfig"
 
+source "arch/arm64/hotplug/Kconfig"
+
 source "drivers/Kconfig"
 
 source "drivers/firmware/Kconfig"
