--- a/arch/arm64/configs/lineage_lv517_defconfig
+++ b/arch/arm64/configs/lineage_lv517_defconfig
@@ -1101,6 +1101,12 @@ CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_HAVE_BPF_JIT=y
 
 #
+# Custom Hotplug Drivers
+#
+CONFIG_CUSTOM_HOTPLUG=y
+CONFIG_ALUCARD_CONTROL=y
+
+#
 # Device Drivers
 #
 
