--- a/arch/arm64/configs/lineage_sf340n_defconfig
+++ b/arch/arm64/configs/lineage_sf340n_defconfig
@@ -1098,6 +1098,12 @@ CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_HAVE_BPF_JIT=y
 
 #
+# Custom Hotplug Drivers
+#
+CONFIG_CUSTOM_HOTPLUG=y
+CONFIG_ALUCARD_CONTROL=y
+
+#
 # Device Drivers
 #
 
