--- a/arch/arm/boot/dts/qcom/apq8053-cdp.dts
+++ b/arch/arm/boot/dts/qcom/apq8053-cdp.dts
@@ -14,18 +14,10 @@
 /dts-v1/;
 
 #include "apq8053.dtsi"
-#include "msm-pmi8950.dtsi"
 #include "msm8953-cdp.dtsi"
-#include "msm8953-pmi8950.dtsi"
-#include "msm8953-camera-sensor-cdp.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. APQ8053 + PMI8950 CDP";
+	model = "Qualcomm Technologies, Inc. APQ8053 CDP";
 	compatible = "qcom,apq8053-cdp", "qcom,apq8053", "qcom,cdp";
 	qcom,board-id= <1 0>;
-};
-
-&pmi8950_charger {
-	qcom,external-typec;
-	qcom,typec-psy-name = "typec";
 };
