--- a/arch/arm/boot/dts/qcom/apq8053-ext-audio-mtp.dts
+++ b/arch/arm/boot/dts/qcom/apq8053-ext-audio-mtp.dts
@@ -14,35 +14,12 @@
 /dts-v1/;
 
 #include "apq8053.dtsi"
-#include "msm-pmi8950.dtsi"
 #include "msm8953-mtp.dtsi"
-#include "msm8953-pmi8950.dtsi"
-#include "msm8953-camera-sensor-mtp.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. APQ8053 + PMI8950 Ext Codec MTP";
+	model = "Qualcomm Technologies, Inc. APQ8053 External Codec MTP";
 	compatible = "qcom,apq8053-mtp", "qcom,apq8053", "qcom,mtp";
 	qcom,board-id= <8 1>;
-};
-
-/{
-	mtp_batterydata: qcom,battery-data {
-		qcom,batt-id-range-pct = <15>;
-		#include "batterydata-itech-3000mah.dtsi"
-		#include "batterydata-ascent-3450mAh.dtsi"
-	};
-};
-
-&pmi8950_fg {
-	qcom,battery-data = <&mtp_batterydata>;
-};
-
-&pmi8950_charger {
-	qcom,battery-data = <&mtp_batterydata>;
-	qcom,chg-led-sw-controls;
-	qcom,chg-led-support;
-	qcom,external-typec;
-	qcom,typec-psy-name = "typec";
 };
 
 &int_codec {
