--- a/arch/arm/boot/dts/qcom/msm8953-cdp-1200p.dts
+++ b/arch/arm/boot/dts/qcom/msm8953-cdp-1200p.dts
@@ -14,14 +14,11 @@
 /dts-v1/;
 
 #include "msm8953.dtsi"
-#include "msm-pmi8950.dtsi"
 #include "msm8953-cdp.dtsi"
 #include "msm8953-audio-cdp.dtsi"
-#include "msm8953-pmi8950.dtsi"
-#include "msm8953-camera-sensor-cdp.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. MSM8953 + PMI8950 CDP";
+	model = "Qualcomm Technologies, Inc. MSM8953 CDP";
 	compatible = "qcom,msm8953-cdp", "qcom,msm8953", "qcom,cdp";
 	qcom,board-id= <1 1>;
 };
@@ -62,11 +59,6 @@
 			bias-pull-down; /* pull down */
 		};
 	};
-};
-
-&pmi8950_charger {
-	qcom,external-typec;
-	qcom,typec-psy-name = "typec";
 };
 
 &hsuart_active {
