--- a/arch/arm/boot/dts/qcom/msm8953-ext-codec-rcm.dts
+++ b/arch/arm/boot/dts/qcom/msm8953-ext-codec-rcm.dts
@@ -14,13 +14,10 @@
 /dts-v1/;
 
 #include "msm8953.dtsi"
-#include "msm-pmi8950.dtsi"
 #include "msm8953-cdp.dtsi"
-#include "msm8953-pmi8950.dtsi"
-#include "msm8953-camera-sensor-cdp.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. MSM8953 + PMI8950 Ext Codec RCM";
+	model = "Qualcomm Technologies, Inc. MSM8953 External Codec RCM";
 	compatible = "qcom,msm8953-cdp", "qcom,msm8953", "qcom,cdp";
 	qcom,board-id= <21 1>;
 };
@@ -108,9 +105,4 @@
 	config {
 		pins = "gpio85", "gpio86", "gpio87";
 	};
-};
-
-&pmi8950_charger {
-	qcom,external-typec;
-	qcom,typec-psy-name = "typec";
 };
