--- a/arch/arm/boot/dts/qcom/msm8953-rcm.dts
+++ b/arch/arm/boot/dts/qcom/msm8953-rcm.dts
@@ -14,21 +14,13 @@
 /dts-v1/;
 
 #include "msm8953.dtsi"
-#include "msm-pmi8950.dtsi"
 #include "msm8953-cdp.dtsi"
-#include "msm8953-pmi8950.dtsi"
 #include "msm8953-audio-cdp.dtsi"
-#include "msm8953-camera-sensor-cdp.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. MSM8953 + PMI8950 RCM";
+	model = "Qualcomm Technologies, Inc. MSM8953 RCM";
 	compatible = "qcom,msm8953-cdp", "qcom,msm8953", "qcom,cdp";
 	qcom,board-id= <21 0>;
-};
-
-&pmi8950_charger {
-	qcom,external-typec;
-	qcom,typec-psy-name = "typec";
 };
 
 &soc {
