--- a/arch/arm/boot/dts/qcom/msm8953-rumi.dts
+++ b/arch/arm/boot/dts/qcom/msm8953-rumi.dts
@@ -14,26 +14,11 @@
 /dts-v1/;
 
 #include "msm8953.dtsi"
-#include "msm-pmi8950.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. MSM8953 + PMI8950 RUMI";
+	model = "Qualcomm Technologies, Inc. MSM8953 RUMI";
 	compatible = "qcom,msm8953-rumi", "qcom,msm8953", "qcom,rumi";
 	qcom,board-id= <15 0>;
-};
-
-&usb3 {
-	vbus_dwc3-supply = <&smbcharger_charger_otg>;
-};
-
-&mdss_dsi0 {
-	lab-supply = <&lab_regulator>;
-	ibb-supply = <&ibb_regulator>;
-};
-
-&mdss_dsi1 {
-	lab-supply = <&lab_regulator>;
-	ibb-supply = <&ibb_regulator>;
 };
 
 &soc {
