--- a/arch/arm/boot/dts/qcom/msm8953-sim.dts
+++ b/arch/arm/boot/dts/qcom/msm8953-sim.dts
@@ -14,26 +14,11 @@
 /dts-v1/;
 
 #include "msm8953.dtsi"
-#include "msm-pmi8950.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. MSMTitaninum + PMI8950 Simulator";
+	model = "Qualcomm Technologies, Inc. MSMTitaninum Simulator";
 	compatible = "qcom,msm8953-sim", "qcom,msm8953", "qcom,sim";
 	qcom,board-id= <16 0>;
-};
-
-&usb3 {
-	vbus_dwc3-supply = <&smbcharger_charger_otg>;
-};
-
-&mdss_dsi0 {
-	lab-supply = <&lab_regulator>;
-	ibb-supply = <&ibb_regulator>;
-};
-
-&mdss_dsi1 {
-	lab-supply = <&lab_regulator>;
-	ibb-supply = <&ibb_regulator>;
 };
 
 &blsp1_uart0 {
