--- a/arch/arm64/configs/lineage_lv517_defconfig
+++ b/arch/arm64/configs/lineage_lv517_defconfig
@@ -498,6 +498,8 @@ CONFIG_COMPAT=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_WAKELOCK=y
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
@@ -4107,6 +4109,7 @@ CONFIG_MSM_KERNEL_PROTECT_MPU=y
 # CONFIG_QCOM_SMCINVOKE is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MACH_LGE=y
+CONFIG_STATE_NOTIFIER=y
 
 #
 # LGE Board Selection
