--- a/arch/arm64/configs/lineage_sf340n_defconfig
+++ b/arch/arm64/configs/lineage_sf340n_defconfig
@@ -2308,7 +2308,7 @@ CONFIG_LGE_PM_BATTERY_ID_CHECKER=y
 # CONFIG_LGE_PM_BATTERY_ID_QCT is not set
 CONFIG_LGE_PM_BATTERY_COFF_4250K=y
 CONFIG_LGE_PM_TEMP_BY_CHG=y
-# CONFIG_LGE_PM_QC20_SCENARIO is not set
+CONFIG_LGE_PM_QC20_SCENARIO=y
 CONFIG_LGE_PM_CHG_LIMIT=y
 # CONFIG_LGE_PM_EMBEDDED_BATTERY is not set
 CONFIG_LGE_PM_USB_CURRENT_MAX_MODE=y
@@ -2329,7 +2329,7 @@ CONFIG_LGE_PM_VFLOAT_TRIM_RESTORE=y
 # CONFIG_LGE_PM_TAPER_CHG_AICL_DISABLE is not set
 CONFIG_LGE_PM_CHARGERLOGO_ADAPTIVE_MORE_CHG_CURRENT=y
 # CONFIG_LGE_PM_CHARGING_SLEEP is not set
-# CONFIG_LGE_PM_LV9_CHARGING_SCENARIO is not set
+CONFIG_LGE_PM_LV9_CHARGING_SCENARIO=y
 CONFIG_LGE_PM_SF3F_CHARGING_SCENARIO=y
 # CONFIG_LGE_PM_CHARGING_VDD_FLASH_CAP_FOR_CAMERA is not set
 CONFIG_LGE_PM_SUPPORT_PARALLEL_CHARGER=y
