--- a/arch/arm64/configs/lineage_ph2n_defconfig
+++ b/arch/arm64/configs/lineage_ph2n_defconfig
@@ -291,6 +291,7 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=m
 CONFIG_IOSCHED_DEADLINE=y
@@ -301,6 +302,7 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
+# CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
@@ -310,6 +312,7 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -511,7 +514,7 @@ CONFIG_PM_SLEEP_DEBUG=y
 # CONFIG_DPM_WATCHDOG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
@@ -4201,6 +4204,7 @@ CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_MSM_DEVFREQ_DEVBW=y
 CONFIG_SPDM_SCM=y
 CONFIG_DEVFREQ_SPDM=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
 # CONFIG_EXTCON is not set
 # CONFIG_MEMORY is not set
 # CONFIG_IIO is not set
