--- a/arch/arm64/hotplug/Kconfig
+++ b/arch/arm64/hotplug/Kconfig
@@ -8,4 +8,13 @@ config ALUCARD_CONTROL
 	depends on CUSTOM_HOTPLUG
 	help
 	  Known for being battery friendly. Developed by Alucard_24@XDA
+
+config BRICKED_HOTPLUG
+	bool "Enable kernel based mpdecision"
+	depends on MSM_RUN_QUEUE_STATS
+	default y
+	help
+	  This enables kernel based multi core control.
+	  (up/down hotplug based on load)
+
 endmenu
